# uvl-tore-classifier-bert

./: .dockerignore  .gitignore  .pre-commit-config.yaml  1st_stage_experiments.ipynb  2_stage_experiments.ipynb  Dockerfile  README.md  bilstm.ipynb  classifier_model.ipynb  dataset_statistics.ipynb  e2e_experiments.ipynb  experiments.ipynb  graphics.ipynb  load_files.ipynb  pyproject.toml  raw_data.dvc  requirements-mac.txt  requirements.txt  train.ipynb  train.py  train_rc.ipynb  train_rc_spellchecker.ipynb  train_sentence.ipynb  train_smote.ipynb  train_smote_rc.ipynb  train_smote_rc_spellchecker.ipynb  train_smote_spellchecker.ipynb  train_spellchecker.ipynb
.devcontainer/: devcontainer.json
.dvc/: config
data/forum/: anno_train.json
data/prolific/: Survey_Question_Answers_Raw.xlsx  TORE_Coded_Answers_1_33.json  TORE_Coded_Answers_34_66.json  TORE_Coded_Answers_34_66.txt  TORE_Coded_Answers_67_100.json  TORE_Coded_Answers_67_100.txt
dvc_plots/: index.html
evaluation/: 1_stage_experiments.ipynb  1st_stage_experiments.ipynb  2_stage_experiments.ipynb  e2e_experiments.ipynb  f1_correlation.ipynb  graphics.ipynb  rc_evaluation.ipynb  rc_spellchecked_evaluation.ipynb  smote_comparison_experiments.ipynb  smote_evaluation.ipynb  smote_rc_evaluation.ipynb  smote_rc_spellchecked_evaluation.ipynb  smote_spellchecked_evaluation.ipynb  spellchecked_evaluation.ipynb  weights.ipynb
pipelines/: sner_pipeline.py
pipelines/conf/: config.yaml
pipelines/experiments/: sner.py
pipelines/sner/: dvc.yaml
raw_data/prolific/: TORE_Coded_Answers_1_33.json  TORE_Coded_Answers_1_33.txt  TORE_Coded_Answers_34_66.json  TORE_Coded_Answers_67_100.json
requirements/: requirements-mac.txt  requirements.txt
src/: dataloading.py  model.py
src/cmd/: classify_sner.py  evaluate_sner.py  import.py  sample.py  train_sner.py
src/data/: __init__.py  data.dvc  dataloading.py  loading.py  model.py  sampling.py  temp.dvc  tooling.py
src/experiments/: bert.py  bert_experiments.sh  bilstm.py  bilstm_experiments.sh  dual_model_stage_bert.sh  dual_model_staged_bert.py  fake_staged_bert.py  fake_staged_bert.sh  retry.sh  roberta.py  roberta_experiments.sh  sner.py  sner_experiments.sh  staged_bert.py  validation.sh
src/helpers/: filehandling.py
src/pipelines/: bert_pipeline.py  bilstm_experiments.sh  bilstm_pipeline.py  dual_model_staged_bert_pipeline.py  retry.sh  (+3 more)
tests/: test_dataloading.py
(+187 files in other folders)
