# This example contains just the necessary options for a src-layout, set up
# the rest of the file as described above.
[project]
name = "uvl_tore_classifier_bert"
version= "0.1"

[tool.setuptools.packages.find]
where = ["src"]  

[tool.mypy]
warn_return_any = "True"
warn_unused_configs = "True"
modules = [
    'data',
    'classifiers',
    'helpers'
]

[[tool.mypy.overrides]]
module="nltk.*"
ignore_missing_imports = "True"

[[tool.mypy.overrides]]
module="sklearn.*"
ignore_missing_imports = "True"

[tool.black]
exclude = '(\.eggs|\.git|\.hg|\.mypy_cache|\.nox|\.tox|\.venv|_build|buck-out|build|dist|__pycache__|.egg-info)'

line-length = 79
include = '''
(
    ^/tests/
  | ^/src/
  
)
'''
