# This example contains just the necessary options for a src-layout, set up
# the rest of the file as described above.
[project]
name = "uvl_tore_classifier_bert"
version= "0.1"

[tool.setuptools]
# ...
package-dir = {"" = "src"}

[tool.mypy]
warn_return_any = "True"
warn_unused_configs = "True"
mypy_path="src"
strict="True"
packages = [
    "classifiers",
    "data",
    "tests",
    "tooling",
    "pipelines"
]



[[tool.mypy.overrides]]
module="nltk.*"
ignore_missing_imports = "True"

[[tool.mypy.overrides]]
module="sklearn.*"
ignore_missing_imports = "True"

[[tool.mypy.overrides]]
module="matplotlib.*"
ignore_missing_imports = "True"

[[tool.mypy.overrides]]
module="mlflow.*"
ignore_missing_imports = "True"

[[tool.mypy.overrides]]
module="strictly_typed_pandas.*"
implicit_reexport = "True"


[tool.black]
exclude = '(\.eggs|\.git|\.hg|\.mypy_cache|\.nox|\.tox|.pickle|.gz|.png|.txt|.json|.prop|.jar|\.venv|_build|buck-out|build|dist|__pycache__|.egg-info)'

line-length = 79
include = '''
(
    ^/tests/
  | ^/src/

)
'''
